# Mzml_Generator

./: .gitignore  20250625_mzml_intcovbind_15.py  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  test_digest.py  test_import_deep.py  test_pyteomics_import.py
src/spec_generator/: config.py  main.py
src/spec_generator/core/: constants.py  isotopes.py  lc.py  noise.py  peptide_isotopes.py  spectrum.py  types.py
src/spec_generator/gui/: constants.py  main_app.py  shared_widgets.py
src/spec_generator/gui/tabs/: __init__.py  antibody_tab.py  base_tab.py  binding_tab.py  docs_tab.py  peptide_map_tab.py  plot_viewer_tab.py  spectrum_tab.py
src/spec_generator/logic/: antibody.py  antibody_logic.py  binding.py  binding_logic.py  charge.py  deconvolution.py  fragmentation.py  peptide.py  peptide_map.py  ptm.py  retention_time.py  simulation.py  spectrum_logic.py
src/spec_generator/utils/: file_io.py  mzml.py  ui_helpers.py
src/spec_generator/workers/: tasks.py  worker_init.py
tests/: test_antibody.py  test_binding.py  test_cancellation.py  test_charge.py  test_deconvolution.py  test_file_io.py  test_fragmentation.py  test_isotopes.py  test_lc.py  test_peptide.py  test_peptide_isotopes.py  test_peptide_map.py  test_ptm.py  test_retention_time.py  test_simulation.py  test_spectrum.py
