[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-generator"
version = "4.0.0"
description = "A simulated mass spectrometry data generator for intact proteins and covalent binding screens."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jules", email = "jules@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "ttkbootstrap",
    "numpy",
    "scipy",
    "numba",
    "lxml",
    "matplotlib",
    "pandas",
    "pyteomics",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
spec-generator = "spec_generator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
