[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-generator"
version = "4.0.0"
description = "A simulated mass spectrometry data generator for intact proteins and covalent binding screens."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jules", email = "jules@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "ttkbootstrap==1.14.2",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "numba==0.61.2",
    "lxml==6.0.1",
    "matplotlib==3.10.6",
    "pandas==2.3.2",
    "pyteomics==4.7.5",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
]

[project.scripts]
spec-generator = "spec_generator.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
